# projet_MIR

./: .gitignore  Q.md  README.md  XGBOOST_IMPLEMENTATION.md  check_df.py  config.toml  correct.md  export_notebook.py  inference_dann.py  main.py  plan.md  predict_real_data.py  pyproject.toml  requirements.txt  results.md  show_results.py  train_dann.py  train_models.py
data_process/: datasets.py  mlp_preprocess_data.py  process_data.py  read_and_plot.py  unet_preprocess_data.py
models/: mlp.py  optimize_xgboost.py  test.py  train.py  train_mlp.py  train_unet.py  train_xgboost.py  unet.py  xgboost_model.py
src/: load_data.py  prediction.py
utils/: get_loss_and_optimizer.py  parse_config.py  statistics.py  write_output.py
weights/mlp_sw/: mlp_sliding_window_model.pth
